--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Font Stuff -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poetsen+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poetsen+One&family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
